# ai-sql-assistant-app

./: .env.example  .gitignore  README.md  ai-sql-assistant-assignment.md  docker-compose.yml  helper_updated.txt  helpful-commands  pyproject.toml
backend/: Dockerfile  pyproject.toml  requirements.txt  run_seed.py
backend/app/: main.py
backend/app/api/: approvals.py  health.py  history.py  schema.py  sessions.py
backend/app/core/: logger_setup.py  logging.py  rate_limit.py  security.py  settings.py
backend/app/db/: init_db.py  pool.py  schema.sql  seed.py  seed_db.py  utils.py
backend/app/graph/: nodes.py  state.py  utils.py  workflow.py
backend/app/models/: types.py
backend/app/resources/: mock_sql_query.py  prompt.py  sql_query.py
backend/app/services/: approval_orchestrator.py  approval_service.py  audit_service.py  executor.py  llm_service.py  mock_llm_service.py  risk_assessor.py  schema_service.py  session_service.py  sql_validation.py  state_store.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: ApprovalPanel.tsx  ChatPanel.tsx  HistoryPanel.tsx  ResultTable.tsx  SchemaExplorer.tsx  SqlBlock.tsx  SqlDiff.tsx
frontend/src/lib/: api.ts
helpers/: helpful-commands  questions for presentation
scripts/: smoke.sh
