[project]
name = "ai-sql-assistant-app"
version = "0.1.0"
description = "AI SQL Assistant"
authors = [
    {name = "Viktoriia Nesterenko"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
    "python-dotenv",
    "openai",
    "langchain",
    "langchain-openai",
    "chromadb",
    "sentence-transformers"
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"