[tool.poetry]
name = "ai-sql-assistant-backend"
version = "0.1.0"
description = "AI SQL Assistant backend"
authors = ["Viktoriia Nesterenko"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.6"
uvicorn = {extras = ["standard"], version = "0.34.0"}
asyncpg = "0.30.0"
pydantic = "2.10.5"
pydantic-settings = "2.7.1"
python-dotenv = "1.0.1"
sqlglot = "26.1.3"
langgraph = "0.2.62"
langchain-core = "0.3.29"
langchain-openai = "0.2.14"
faker = "33.3.1"
orjson = "3.10.14"

[tool.poetry.group.dev.dependencies]
ruff = "0.9.4"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
